--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
     <nav class="nav-extended card-panel cyan darken-2 row">
       <div class="nav-wrapper">
         <!-- BRAND  -->
-        <a href="#!" class="brand-logo align-center">Travel Stash</a>
+        <h1 class="brand-logo align-center flow-text">Travel Stash</h1>
         </div>
         <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
       <div class="nav-content">
