--- a/stash.html
+++ b/stash.html
@@ -92,15 +92,17 @@
 
             <div class="row">
                 <form class="col s12">
-                    <div id="sidebar" class="row cyan lighten-5">
-                        <div class="input-field col s12">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
-                            <label for="textarea1">Notes</label>
-                        </div>
+                    <div id="sidebar" class="input-field col s12">
+                        <input id="input_text" type="text" height=100%>
+                        <label for="input_text">Notes</label>
+                        <button id="savenotes" class="btn waves-effect waves-light hoverable cyan darken-2"
+                            type="button">Save Notes</button>
+
                     </div>
-                </form>
             </div>
+            </form>
         </div>
+    </div>
     </div>
 
 
