--- a/stash.html
+++ b/stash.html
@@ -39,7 +39,7 @@
     <div id="pageContent" class="row">
 
 
-        <div class="col s12 m9 l9">
+        <div class="col m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
             <!-- map goes here -->
             <div class="row teal lighten-4">
@@ -87,11 +87,11 @@
             <!-- -------------------------------------------------------------------------------------------------- -->
         </div>
 
-        <div id="notesCont" class="col s12 m3 l3">
+        <div id="notesCont" class="col  m3 l3">
             <!-- Grey navigation panel -->
 
-            <div id="sidebar" class="row">
-                    <div class="input-field">
+            <div id="sidebar" class="row teal lighten-4 ">
+                    <div class="input-field ">
                         <input id="input_text" type="text" ></input>
                         <label for="input_text">Notes</label>
                         <button id="savenotes" class="btn waves-effect waves-light hoverable cyan darken-2"
