added 5 day forecast

--- a/stash.html
+++ b/stash.html
@@ -53,13 +53,40 @@
             <!-- This will be where the weather forecast will go -------------------------------------------------------------->
             <div class="row cyan lighten-4">
                 <div id="weatherContainer" class="col s12 m12 l12">
-
-                    <div id="weather">
-                        <h2 class="city">Weather in <span id="dynamCity"></span></h2>
-                        <h1 class="temp"><span id="dynamTemp"></span>°C</h1>
-                        <div class="description"><span id="dynamDescription"></span></div>
-                        <div class="humidity">Humidity: <span id="dynamHumidity"></span>%</div>
-                        <div class="wind">Wind speed: <span id="dynamWind"></span>km/h</div>
+                    <div id="weather0">
+                        <h4 class="city"><span></span></h4>
+                        <h4 class="temp"><span></span>&#8451</h4>
+                        <div class="description"><span></span></div>
+                        <div class="humidity">humidity: <span></span>%</div>
+                        <div class="wind">wind speed: <span></span>km/h</div>
+                    </div>
+                    <div id="weather8">
+                        <h4 class="city"><span></span></h4>
+                        <h4 class="temp"><span></span>&#8451</h4>
+                        <div class="description"><span></span></div>
+                        <div class="humidity">humidity: <span></span>%</div>
+                        <div class="wind">wind speed: <span></span>km/h</div>
+                    </div>
+                    <div id="weather16">
+                        <h4 class="city"><span></span></h4>
+                        <h4 class="temp"><span></span>&#8451</h4>
+                        <div class="description"><span></span></div>
+                        <div class="humidity">humidity: <span></span>%</div>
+                        <div class="wind">wind speed: <span></span>km/h</div>
+                    </div>
+                    <div id="weather24">
+                        <h4 class="city"><span></span></h4>
+                        <h4 class="temp"><span></span>&#8451</h4>
+                        <div class="description"><span></span></div>
+                        <div class="humidity">humidity: <span></span>%</div>
+                        <div class="wind">wind speed: <span></span>km/h</div>
+                    </div>
+                    <div id="weather32">
+                        <h4 class="city"><span></span></h4>
+                        <h4 class="temp"><span></span>&#8451</h4>
+                        <div class="description"><span></span></div>
+                        <div class="humidity">humidity: <span></span>%</div>
+                        <div class="wind">wind speed: <span></span>km/h</div>
                     </div>
                 </div>
             </div>
