--- a/stash.html
+++ b/stash.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="nav-content">
-            <p></p>
+            
             <!-- Dynamically generated title of searched city from the users search -->
 
         </div>
@@ -94,11 +94,11 @@
             <div id="checklist" class="row teal lighten-4 ">
                 <div id="custom" class="col s6 m6 l6">
                     <div id="pre-pop">
-                        <p>Choose from default items: </p>
+                        <p>Select a below item to start 'Need to Pack' list':</p>
                         <hr>
                     </div>
                     <form id="custom-new" class="input-field">
-                        <input type="text" id="add-more-cont" placeholder="Enter Item" class="white-text">
+                        <input type="text" id="add-more-cont" placeholder="Enter Item here and select 'ADD ITEM'" class="white-text">
                         <button class="btn waves-effect waves-light hoverable cyan darken-2" type="button"
                             id="add-more">add item</button>
                     </form>
@@ -106,7 +106,6 @@
                     <!--NIC --  Use checkboxes when looking for yes or no answers. true false? The for attribute is necessary to bind our custom checkbox with the input.
                  Add the input's id as the value of the for attribute of the label. -->
                     <div id="custom-list" class="col s6">
-                        <p>To Pack:</p>
                         <hr>
                     </div>
                 </div>
