--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
         <p>Welcome to TRAVEL STASH! </p>
         <p>1. Please enter the city you are visiting and select 'Enter.'</p>
         <p>2. Once on the map and weather page, please plan and pack your inventory!</p>
-        <p>3. Have an amazing holiday without leaving anythign behind.</p>
+        <p>3. Have an amazing holiday without leaving anything behind.</p>
         
         <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
         <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
