added comments to wether js and weather html

--- a/stash.html
+++ b/stash.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         -->
-            <!-- This will be where the weather forecast will go -------------------------------------------------------------->
+            <!-- Weather information being called from API in conjunction with JS file -------------------------------------------------------------->
             <div class="row cyan lighten-4">
                 <div id="weatherContainer" class="col s12 m12 l12">
                     <div id="weather0">
