--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
       <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
       <div class="nav-content">
 
-        <p class="nav-title cyan-text text-lighten-5">Plan Your Trip</p>
+        <p class="nav-title cyan-text text-lighten-5" id="introText">Plan Your Trip</p>
         <p>Welcome to TRAVEL STASH</p>
         <p>1. Please enter the city you are visiting and select 'Enter.'</p>
         <p>2. Once on the map and weather page, please plan and pack your inventory!</p>
@@ -59,13 +59,12 @@
       <!-- This is the'first card -->
       <div class="row " id="wrapper">
 
-        <div class="col s12 m6 l3 ">
+        <div class="col s12 m6 l3">
           <div class="card cyan darken-2 hoverable z-depth-5">
-            <div class="card-content white-text">
+            <div class="card-content white-text card-bg">
               <!-- Custom photo dynamic background image can go here  -->
-              <span class="card-title "><a href="http://www.google.com"
-                  class=" white-text scale-transition">Location</a></span>
-
+              <span class="card-title"><a href="http://www.google.com"
+                  class="white-text scale-transition">Location</a></span>
             </div>
           </div>
         </div>
