--- a/dashboard.html
+++ b/dashboard.html
@@ -29,11 +29,7 @@
       <!-- This is where we can put a slogan/paragraph of ' how to use' etc..... -->
       <div class="nav-content">
 
-        <p class="nav-title cyan-text text-lighten-5" id="introText">Plan Your Trip</p>
-        <p>Welcome to TRAVEL STASH</p>
-        <p>1. Please enter the city you are visiting and select 'Enter.'</p>
-        <p>2. Once on the map and weather page, please plan and pack your inventory!</p>
-        <p>3. Have an amazing holiday without leaving anything behind.</p>
+        <p class="nav-title cyan-text text-lighten-5">Plan Your Trip</p>
 
         <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
         <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
@@ -55,19 +51,24 @@
     <!-- this is a card section for dynamic use i have the static cards there for viewing purposes
     you can see how they will wrap and show on the page. I have left a section for a background image-->
     <div class='card-panel cyan lighten-5'>
-
+      <div id="introText">
+        <p>Welcome to TRAVEL STASH</p>
+        <p>1. Please enter the city you are visiting and select 'Enter.'</p>
+        <p>2. Once on the map and weather page, please plan and pack your inventory!</p>
+        <p>3. Have an amazing holiday without leaving anything behind.</p>
+      </div>
       <!-- This is the'first card -->
       <div class="row " id="wrapper">
 
-        <div class="col s12 m6 l3">
+        <!-- <div class="col s12 m6 l3">
           <div class="card cyan darken-2 hoverable z-depth-5">
-            <div class="card-content white-text card-bg">
-              <!-- Custom photo dynamic background image can go here  -->
-              <span class="card-title"><a href="http://www.google.com"
+            <div class="card-content white-text card-bg"> -->
+        <!-- Custom photo dynamic background image can go here  -->
+        <!-- <span class="card-title"><a href="http://www.google.com"
                   class="white-text scale-transition">Location</a></span>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
