--- a/stash.html
+++ b/stash.html
@@ -43,8 +43,7 @@
         <div class="col m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
             <!-- map goes here -->
-            <h1 class="mapTitle">My Google Map</h1>
-            <div id="map"></div>
+            <!-- <div id="map"></div> -->
 
             <script>
                 function initMap() {
@@ -57,6 +56,7 @@
                     var map = new google.maps.Map(document.getElementById('map'), options);
                 }
             </script>
+
             <style>
                 #map {
                     height: 400px;
@@ -64,14 +64,16 @@
                 }
             </style>
 
-            <!--
+            
             <div class="row teal lighten-4">
                 <div id="map" class="col s12 m12 l12">
                     <div><img class="center-align col s12 m12 l12" width="650" src="./assets/images/map-default.jpg">
                     </div>
                 </div>
             </div>
-        -->
+       
+
+
             <!-- Weather information being called from API in conjunction with JS file -------------------------------------------------------------->
             <div class="row cyan lighten-4">
                 <div id="weatherContainer" class="col s12 m12 l12">
