moved map styles to stles.css and removed inline css

--- a/stash.html
+++ b/stash.html
@@ -42,9 +42,6 @@
 
         <div class="col m9 l9">
             <!-- main page content  ------------------------------------------------------------------------------->
-            <!-- map goes here -->
-            <!-- <div id="map"></div> -->
-
             <script>
                 function initMap() {
                     //Map options
@@ -57,12 +54,12 @@
                 }
             </script>
 
-            <style>
+            <!-- <style>
                 #map {
                     height: 400px;
                     width: 100%;
                 }
-            </style>
+            </style> -->
 
             
             <div class="row teal lighten-4">
