refining-for-demo

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Font-Awesome link - used for the github logo -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- Our custom .css file - It is placed here to override any links above -->
@@ -78,8 +80,8 @@
 
       <div class="cyan darken-2 footer-copyright">
         <div class="container ">
-          Nic, Dan, Ned & Kel
-          <a class="grey-text text-lighten-4  right" href="#!">More Links</a>
+          The Collaborators - Nic, Dan, Ned & Rickelle
+          <a class="grey-text text-lighten-4  right" href="https://github.com/Kokkonut/travel-stash"><i class="fa fa-github" style="font-size:36px"></i> GitHub Link</a>
         </div>
   </main>
   </footer>
