--- a/stash.html
+++ b/stash.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Font-Awesome Icon - used for the GitHub Logo -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
@@ -25,7 +27,9 @@
     <nav class="nav-extended card-panel cyan darken-2 row">
         <div class="nav-wrapper">
             <!-- BRAND  -->
-            <h1 class="top flow-text">Travel Stash</h1>
+
+         
+         <h1 class="top flow-text"><a class="grey-text text-lighten-4" href="./dashboard.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></button> Travel Stash</h1>
         </div>
 
         <div class="nav-content">
