--- a/dashboard.html
+++ b/dashboard.html
@@ -36,9 +36,11 @@
         <!-- <p> Blaaaahh blahh blah Get your local weather updates to your desired travel location and organise yourself by making a custom to-do/packing list blahh blahh </p> -->
         <!-- this is the plus button this will need to be linked to the dynamically created location cards to add a new one -->
 
-
-        <a class="btn-floating btn-large right waves-effect waves cyan hoverable" id="new-btn"><i
-            class="material-icons tooltipped" data-position="bottom" data-tooltip="Add Trip">add</i></a>
+        <div>
+          <a class="btn-floating btn-large right waves-effect waves cyan lighten-4 hoverable" id="new-btn"><i
+              class="material-icons tooltipped" data-position="bottom" data-tooltip="Add Trip">add</i></a>
+          <p>Press to add trip</p>
+        </div>
       </div>
       <!-- new trip here -->
       <div id="new-trip">
@@ -81,7 +83,8 @@
       <div class="cyan darken-2 footer-copyright">
         <div class="container ">
           The Collaborators; Nic, Dan, Ned & Rickelle
-          <a class="grey-text text-lighten-4  right" href="https://github.com/Kokkonut/travel-stash"><i class="fa fa-github" style="font-size:24px"></i> GitHub</a>
+          <a class="grey-text text-lighten-4  right" href="https://github.com/Kokkonut/travel-stash"><i
+              class="fa fa-github" style="font-size:24px"></i> GitHub Link</a>
         </div>
   </main>
   </footer>
