Revert "Feature/final touches"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             placeholder="password"></textarea>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light hoverable cyan lighten-1" type="submit" name="action"
+                <button class="btn waves-effect waves-light hoverable cyan darken-2" type="submit" name="action"
                     id="user-sub">Submit</button>
             </form>
         </div>
